--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     I am a passionate Programmer.
                                 </h2>
                                 <p>
-                                        I am a second year undergraduate computer engineering student at C.K.Pithawala 
+                                        I am a third year undergraduate computer engineering student at C.K.Pithawala 
                                     college of Engineering and Technology, Surat.
                                     I am proficient in multiple programming languages including <strong>Python, Java, C++,
                                     C, HTML,CSS and Javascript.</strong><br><br>
@@ -215,7 +215,7 @@
                     <tr>
                         <td valign="middle" align="left" height="100">
                             <font face="arial" color="#3333cc" size="6">
-                                <strong><a href="https://www.linkedin.com/in/madhu-saini-77335b20a/" style="color:rgba(252, 252, 252, 0.788)" target="_blank">
+                                <strong><a href="https://www.linkedin.com/in/madhu-saini/" style="color:rgba(252, 252, 252, 0.788)" target="_blank">
                                     <span class="fa fa-linkedin-square" aria-hidden="true"> Linkedin</span></a></strong>
                             </font>
                         </td>
